--- a/wunderlist/package.json
+++ b/wunderlist/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "gsap": "^2.1.3",
+    "mdbreact": "^4.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loader-spinner": "^2.3.0",
